--- a/provoice_RTB_24jan25.html
+++ b/provoice_RTB_24jan25.html
@@ -29,10 +29,10 @@
       </div>
       <div class="row">
 <div class="col-md-2">
-          <button type="button" class="btn btn-primary" disabled id="btn1">0700-Bathroom</button>
+          <button type="button" class="btn btn-primary"  id="btn1">0700-Bathroom</button>
         </div>
         <div class="col-md-2">
-          <button type="button" class="btn btn-primary" disabled id="btn2">0701-Roofing</button>
+          <button type="button" class="btn btn-primary"  id="btn2">0701-Roofing</button>
         </div>
         <div class="col-md-2">
           <button type="button" class="btn btn-primary" id="btn3">0702-Windows</button>
@@ -47,7 +47,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/provoice_RTB_24jan25.js"></script>
+  <script src="https://js.formifyweb.com/provoice_RTB_24jan25.js?ver=1"></script>
 
   <!-- Custom script for form submission and notification -->
   <script>
