--- a/JK&co_retRTB_autoinc_jan25.html
+++ b/JK&co_retRTB_autoinc_jan25.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="container mt-5">
-    <h2 class="text-center">Api Post Form (RTB-AUTO)</h2>
+    <h2 class="text-center">Api Post Form (RTB-AUTO-SR)</h2>
   <form id="leadForm">
  <div class="row">
     <div class="col-md-4">
