--- a/provoice_td_onep_auto.html
+++ b/provoice_td_onep_auto.html
@@ -147,7 +147,43 @@
 
 
 <div class="row">
-   <div class="col-md-6">
+  <div class="col-md-4">
+          <div class="form-group">
+           <label for="current_provider">Current Insurance Provider</label>
+<select name="current_provider" class="form-control" id="current_provider">
+    <option value="aaa">AAA</option>
+    <option value="auto_insurance_specialists">Auto Insurance Specialists</option>
+    <option value="allstate">Allstate</option>
+    <option value="geico">GEICO</option>
+    <option value="direct_auto">Direct Auto</option>
+    <option value="farmers">Farmers</option>
+    <option value="nationwide">Nationwide</option>
+    <option value="plymouth_rock">Plymouth Rock</option>
+    <option value="progressive">Progressive</option>
+    <option value="state_farm">State Farm</option>
+    <option value="travelers">Travelers</option>
+    <option value="usaa">USAA</option>
+    <option value="liberty_mutual">Liberty Mutual</option>
+    <option value="amica">Amica</option>
+    <option value="kemper">Kemper</option>
+    <option value="21st_century">21st Century</option>
+    <option value="dairyland">Dairyland</option>
+    <option value="direct_general">Direct General</option>
+    <option value="elephant">Elephant</option>
+    <option value="esurance">Esurance</option>
+    <option value="infinity">Infinity</option>
+    <option value="mercury">Mercury</option>
+    <option value="metlife">MetLife</option>
+    <option value="safe_auto">Safe Auto</option>
+    <option value="the_general">The General</option>
+    <option value="other">Other</option>
+</select>
+          </div>
+
+
+</div>
+
+   <div class="col-md-4">
           <div class="form-group">
 <label for="currently_insured">Currently Insured</label>
 <select name="currently_insured" class="form-control" id="currently_insured">
@@ -158,7 +194,7 @@
 </select>
         </div>
 </div>
-   <div class="col-md-6">
+   <div class="col-md-4">
           <div class="form-group">
 <label for="homeowner">HomeOwner?</label>
 <select name="homeowner" class="form-control" id="homeowner">
@@ -220,7 +256,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/provoice_td_onep_auto.js?ver=1"></script>
+  <script src="https://js.formifyweb.com/provoice_td_onep_auto.js?ver=2"></script>
 
     
 
