--- a/provoice_td_autopost_1stcm.html
+++ b/provoice_td_autopost_1stcm.html
@@ -252,7 +252,36 @@
         </div>
 </div>
 </div>
-
+<div class="row">
+  <div class="col-md-4">
+          <div class="form-group">
+<label for="licensed">Licensed</label>
+<select name="licensed" class="form-control" id="licensed">
+   <option value="TRUE">Yes</option>
+ <option value="FALSE">No</option>
+   
+   
+</select>
+        </div>
+</div>
+     
+   <div class="col-md-4">
+          <div class="form-group">
+<label for="dui">DUI</label>
+<select name="dui" class="form-control" id="dui">
+<option value="FALSE">No</option>
+    <option value="TRUE">Yes</option>
+    
+</select>
+        </div>
+</div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <label for="months_insured_continuously">Months Insured Continuously</label>
+            <input type="number" class="form-control" id="months_insured_continuously" placeholder="" required>
+          </div>
+        </div>
+</div>
 
 
   
