--- a/stark_fe_pingpost.html
+++ b/stark_fe_pingpost.html
@@ -69,7 +69,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/stark_fe_pingpost.js"></script>
+  <script src="https://js.formifyweb.com/stark_fe_pingpost.js?ver=1"></script>
 
     
 
