--- a/provoice_auto_eti_tdpost_updated.html
+++ b/provoice_auto_eti_tdpost_updated.html
@@ -191,111 +191,22 @@
           <div class="form-group">
            <label for="current_provider">Current Insurance Provider</label>
 <select name="current_provider" class="form-control" id="current_provider">
-      <option value="21st_century">21st Century</option>
-    <option value="direct_auto_insurance">Direct Auto Insurance</option>
-    <option value="direct_general">Direct General</option>
-    <option value="erie_insurance_group">Erie Insurance Group</option>
-    <option value="good2go">Good2Go Auto Insurance</option>
-    <option value="kin_insurance">Kin Insurance</option>
-    <option value="metromile">Metromile</option>
-    <option value="mutual_of_omaha">Mutual Of Omaha</option>
-    <option value="myhippo">Myhippo</option>
-    <option value="company_not_listed">** Company Not Listed</option>
-    <option value="alfa_insurance">Alfa Insurance</option>
+         <option value="aaa">AAA</option>
+    <option value="auto_insurance_specialists">Auto Insurance Specialists</option>
     <option value="allstate">Allstate</option>
-    <option value="ameriprise">Ameriprise</option>
-    <option value="amica_mutual_insurance">Amica Mutual Insurance</option>
-    <option value="auto_owners_insurance">Auto-Owners Insurance</option>
-    <option value="comparenow">Compare Now</option>
-    <option value="cssa_insurance_exchange">CSAA Insurance Exchange</option>
-    <option value="cure_auto_insurance">CURE Auto Insurance</option>
-    <option value="geico">Geico</option>
-    <option value="independent_agent">Independent Agent</option>
-    <option value="kemper_insurance">Kemper Insurance</option>
-    <option value="lemonade_insurance">Lemonade Insurance</option>
-    <option value="plymouth_rock">Plymouth Rock</option>
-    <option value="safe_auto">Safe Auto Insurance Company</option>
-    <option value="safeco">Safeco</option>
-    <option value="sentry_insurance">Sentry Insurance</option>
-    <option value="shelter_insurance">Shelter Insurance</option>
-    <option value="state_auto">State Auto</option>
-    <option value="state_farm">State Farm</option>
-    <option value="the_general">The General</option>
-    <option value="united_auto_insurance">United Auto Insurance</option>
-    <option value="alfa">Alfa</option>
-    <option value="american_casualty">American Casualty</option>
-    <option value="amica_insurance">Amica Insurance</option>
-    <option value="aaa">AAA</option>
-    <option value="aarp">AARP</option>
-    <option value="aig">AIG</option>
-    <option value="efinancial">eFinancial</option>
-    <option value="esurance">Esurance</option>
-    <option value="goji">Goji</option>
-    <option value="new_york_life">New York Life</option>
-    <option value="ny_life">New York Life</option>
-    <option value="root">Root Insurance</option>
-    <option value="the_hanover_insurance_group">The Hanover Insurance Group</option>
-    <option value="american_automobile_insurance">American Automobile Insurance</option>
-    <option value="guide_one_insurance">Guide One Insurance</option>
-    <option value="state_and_county_mutual_fire_insurance">State And County Mutual Fire Insurance</option>
-    <option value="state_national_insurance">State National Insurance</option>
-    <option value="verti_insurance">Verti Insurance</option>
-    <option value="wawanesa_insurance">Wawanesa Insurance</option>
-    <option value="wawanesa_mutual">Wawanesa Mutual</option>
-    <option value="acceptance">Acceptance</option>
-    <option value="allied_insurance">Allied Insurance</option>
-    <option value="american_family">American Family Insurance</option>
-    <option value="american_national">American National</option>
-    <option value="country_financial">Country Financial</option>
-    <option value="farm_bureau">Farm Bureau</option>
-    <option value="farmers">Farmers Insurance Group</option>
-    <option value="freeway_insurance">Freeway Insurance</option>
-    <option value="gainsco">Gainsco Insurance</option>
-    <option value="hartford">Hartford</option>
-    <option value="healthiq">Healthiq</option>
-    <option value="liberty_mutual">Liberty Mutual</option>
-    <option value="mapfre_insurance">MAPFRE Insurance</option>
-    <option value="mercury">Mercury Insurance</option>
-    <option value="metlife">Metlife</option>
-    <option value="national_general">National General Insurance</option>
+    <option value="geico">GEICO</option>
+    <option value="direct_auto">Direct Auto</option>
+    <option value="farmers">Farmers</option>
     <option value="nationwide">Nationwide</option>
-    <option value="navy_mutual">Navy Mutual</option>
-    <option value="njm_auto_insurance">NJM Auto Insurance</option>
-    <option value="noblr">Noblr</option>
-    <option value="northwestern_mutual">Northwestern Mutual</option>
-    <option value="oscar">Oscar</option>
+    <option value="plymouth_rock">Plymouth Rock</option>
     <option value="progressive">Progressive</option>
-    <option value="prudential">Prudential</option>
-    <option value="selectquote">Selectquote</option>
-    <option value="travelers">Travelers Insurance Company</option>
-    <option value="tristate">Tristate</option>
+    <option value="state_farm">State Farm</option>
+    <option value="travelers">Travelers</option>
     <option value="usaa">USAA</option>
-    <option value="verti">Verti Insurance</option>
-    <option value="western_&_southern_financial">Western & Southern Financial</option>
-    <option value="aiu_insurance">AIU Insurance</option>
-    <option value="american_economy">American Economy</option>
-    <option value="american_empire_insurance">American Empire Insurance</option>
-    <option value="american_financial">American Financial</option>
-    <option value="american_home_assurance">American Home Assurance</option>
-    <option value="american_insurance">American Insurance</option>
-    <option value="american_reliable">American Reliable</option>
-    <option value="american_republic">American Republic</option>
-    <option value="american_service_insurance">American Service Insurance</option>
-    <option value="bristol">Bristol</option>
-    <option value="brooke_insurance">Brooke Insurance</option>
-    <option value="cal_farm_insurance">Cal Farm Insurance</option>
-    <option value="california_casualty_and_fire">California Casualty And Fire</option>
-    <option value="colonial_penn">Colonial Penn</option>
-    <option value="goauto_insurance">Goauto Insurance</option>
-    <option value="great_american">Great American</option>
-    <option value="middlesex_insurance">Middlesex Insurance</option>
-    <option value="molina">Molina</option>
-    <option value="orion_auto">Orion Auto</option>
-    <option value="amco">Amco</option>
-    <option value="american_alliance">American Alliance</option>
-    <option value="american_direct_business_insurance">American Direct Business Insurance</option>
-    <option value="american_international_ins">American International Ins</option>
-    <option value="american_international_pacific">American International Pacific</option>
+    <option value="liberty_mutual">Liberty Mutual</option>
+    <option value="amica">Amica</option>
+    <option value="kemper">Kemper</option>
+    <option value="other">Other</option>
 </select>
           </div>
 
