Update and rename jk&co_autoTD_inbound.html to jk&co_autoTD_evtech.html

--- a/jk&co_autoTD_evtech.html
+++ b/jk&co_autoTD_evtech.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Jk&Co Auto Post TD</title>
+  <title>Jk&Co Auto Post TD EV</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <style>
     body {
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="container mt-5">
-    <h2 class="text-center">Api Form</h2>
+    <h2 class="text-center">Api Form (AUTO EV)</h2>
     <form id="leadForm">
    
       <div class="row">
@@ -393,7 +393,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/jk&co_autoTD_inbound.js?ver=1"></script>
+  <script src="https://js.formifyweb.com/jk&co_autoTD_evtech.js"></script>
 
     
 
