--- a/jk&co_autoTD_glb_post.html
+++ b/jk&co_autoTD_glb_post.html
@@ -405,7 +405,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="jk&co_autoTD_glb_post.js"></script>
+  <script src="https://js.formifyweb.com/jk&co_autoTD_glb_post.js"></script>
 
     
 
