--- a/provoice_td_onep_auto_21march.html
+++ b/provoice_td_onep_auto_21march.html
@@ -197,7 +197,39 @@
         </div>
 </div>
 </div>
-
+<div class="row">
+<div class="col-md-4">
+          <div class="form-group">
+            <label for="months_insured_continuously">Months Insured Continuously</label>
+            <input type="number" class="form-control" id="months_insured_continuously" placeholder="ex: 2" required>
+          </div>
+        </div>
+   <div class="col-md-4">
+          <div class="form-group">
+<label for="dui">DUI</label>
+<select name="dui" class="form-control" id="dui">
+  <option value="FALSE">No</option>
+ <option value="TRUE">Yes</option>
+ 
+   
+   
+</select>
+        </div>
+</div>
+   <div class="col-md-4">
+          <div class="form-group">
+<label for="dui">licensed?</label>
+<select name="licensed" class="form-control" id="licensed">
+  
+ <option value="TRUE">Yes</option>
+  <option value="FALSE">No</option>
+ 
+   
+   
+</select>
+        </div>
+</div>
+  </div>
 
 
 
@@ -220,7 +252,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/provoice_td_onep_auto_21march.js"></script>
+  <script src="https://js.formifyweb.com/provoice_td_onep_auto_21march.js?ver=1"></script>
 
     
 
