--- a/jk&co_autopost_ringba_25march.html
+++ b/jk&co_autopost_ringba_25march.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Jk&Co Auto Post Ringba</title>
+  <title>Jk&Co Auto Post Ringba LDN</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <style>
     body {
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="container mt-5">
-    <h2 class="text-center">Api Form (Ringba)</h2>
+    <h2 class="text-center">Api Form (LDN)</h2>
     <form id="leadForm">
    
       <div class="row">
