Update and rename trends_dncChecker25mar.html to Medi_dncChecker25mar.html

--- a/Medi_dncChecker25mar.html
+++ b/Medi_dncChecker25mar.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Trends DNC Checker</title>
+  <title>Medi DNC Checker</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <style>
     body {
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="container mt-5">
-    <h2 class="text-center">Api DNC Checker</h2>
+    <h2 class="text-center">Medi DNC Checker</h2>
     <form id="leadForm">
    
       <div class="form-group">
