--- a/jk&co_autopost_ringba_25march.html
+++ b/jk&co_autopost_ringba_25march.html
@@ -157,16 +157,7 @@
         </div>
    
 </div>
-<div class="row">
 
-                <div class="col-md-12">
-          <div class="form-group">
-            <label for="trusted_form">Trusted Form Cert URL</label>
-            <input type="text" class="form-control" id="trusted_form" placeholder="http://" required>
-          </div>
-        </div>
-   
-</div>
 
 
 
@@ -188,7 +179,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/jk&co_autopost_ringba_25march.js"></script>
+  <script src="https://js.formifyweb.com/jk&co_autopost_ringba_25march.js?ver=1"></script>
 
     
 
