--- a/leadprosper_auto_provoice.html
+++ b/leadprosper_auto_provoice.html
@@ -200,7 +200,13 @@
 </select>
         </div>
 </div>
+  <div class="col-md-4">
+          <div class="form-group">
+  <label for="dob">Date of Birth</label>
+<input type="date" id="date_of_birth" name="date_of_birth" value="2015-07-21" required>
 </div>
+    </div>
+  </div>
 <div class="row">
  
      
@@ -243,7 +249,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/leadprosper_auto_provoice.js?ver=1"></script>
+  <script src="https://js.formifyweb.com/leadprosper_auto_provoice.js?ver=2"></script>
 
   <!-- Custom script for form submission and notification -->
    <script>
