--- a/leadprosper_auto_provoice.html
+++ b/leadprosper_auto_provoice.html
@@ -133,6 +133,10 @@
                 <label for="jornaya_lead_id">Jornaya Lead ID:</label>
                 <input type="text" class="form-control" id="jornaya_lead_id" name="jornaya_lead_id" required placeholder="Enter Jornaya Lead ID">
             </div>
+       <div class="form-group">
+                <label for="address">Address</label>
+                <input type="text" class="form-control" id="address" name="address" required placeholder="st address here">
+            </div>
 <div class="row">
     <div class="col-md-4">
 <div class="form-group">
@@ -203,7 +207,7 @@
   <div class="col-md-4">
           <div class="form-group">
   <label for="dob">Date of Birth</label>
-<input type="date" id="date_of_birth" name="date_of_birth" value="2015-07-21" required>
+<input type="date" id="date_of_birth" class="form-control" name="date_of_birth" value="2015-07-21" required>
 </div>
     </div>
   </div>
@@ -249,7 +253,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/leadprosper_auto_provoice.js?ver=2"></script>
+  <script src="https://js.formifyweb.com/leadprosper_auto_provoice.js?ver=3"></script>
 
   <!-- Custom script for form submission and notification -->
    <script>
