--- a/leadprosper_home_provoice.html
+++ b/leadprosper_home_provoice.html
@@ -27,7 +27,7 @@
 </div>
 </div>
 <div class="row">
-<div class="col-md-6">
+<div class="col-md-4">
             <div class="form-group">
                 <label for="phone_home">Phone Number:</label>
                 <input type="tel" id="phone" name="phone" class="form-control"
@@ -37,10 +37,16 @@
          required>
             </div>
  </div>
-<div class="col-md-6">
+<div class="col-md-4">
             <div class="form-group">
   <label for="leadcreationdate">Lead Creation Date:</label>
   <input type="datetime-local" id="leadcreationdate" class="form-control" name="leadcreationdate" required>
+    </div>
+ </div>
+  <div class="col-md-4">
+            <div class="form-group">
+  <label for="email">Email</label>
+  <input type="email" id="email" class="form-control" name="email" placeholder="jo@example.com" required>
     </div>
  </div>
 </div>
@@ -169,7 +175,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/leadprosper_home_provoice.js?ver=2"></script>
+  <script src="https://js.formifyweb.com/leadprosper_home_provoice.js?ver=3"></script>
 
   <!-- Custom script for form submission and notification -->
    <script>
