--- a/leadprosper_home_provoice.html
+++ b/leadprosper_home_provoice.html
@@ -162,6 +162,31 @@
   </div>
     </div>
          </div>
+      <div class="row">
+      <div class="col-md-4">
+        <div class="form-group>
+          <label for="gender">Gender:</label>
+<select name="gender" id="gender" class="form-control">
+  
+  <option value="Male">Male</option>
+  <option value="Female">Female</option>
+  <option value="Other">Other</option>
+</select>
+           </div>
+         </div>
+        <div class="col-md-4">
+        <div class="form-group>
+        <label for="currentprovider">Current Provider:</label>
+<input type="text" id="currentprovider" name="currentprovider" class="form-control" placeholder="Enter your current provider">
+</div>
+          </div>
+         <div class="col-md-4">
+        <div class="form-group>
+        <label for="monthscontinuallyinsured">Months Continually Insured:</label>
+<input type="number" id="monthscontinuallyinsured" class="form-control" name="monthscontinuallyinsured" min="0" placeholder="Enter number of months">
+</div>
+           </div>
+         </div>
         <div class="form-group">
     <label for="propertytype">Property Type:</label>
     <input type="text" id="propertytype" name="propertytype" class="form-control" required>
@@ -175,7 +200,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/leadprosper_home_provoice.js?ver=4"></script>
+  <script src="https://js.formifyweb.com/leadprosper_home_provoice.js?ver=5"></script>
 
   <!-- Custom script for form submission and notification -->
    <script>
