--- a/leadprosper_home_provoice.html
+++ b/leadprosper_home_provoice.html
@@ -187,10 +187,23 @@
 </div>
            </div>
          </div>
+      <div class="row">
+      <div class="col-md-8">
+        <div class="form-group>
         <div class="form-group">
     <label for="propertytype">Property Type:</label>
     <input type="text" id="propertytype" name="propertytype" class="form-control" required>
   </div>
+         </div>
+           <div class="col-md-4">
+        <div class="form-group>
+        <div class="form-group">
+    <label for="yearbuilt">Year Built</label>
+    <input type="text" id="yearbuilt" name="yearbuilt" placeholder="2000"class="form-control" required>
+  </div>
+         </div>
+        </div>
+        
       <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
     </form>
  <div id="alertContainer"></div>
@@ -200,7 +213,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/leadprosper_home_provoice.js?ver=5"></script>
+  <script src="https://js.formifyweb.com/leadprosper_home_provoice.js?ver=6"></script>
 
   <!-- Custom script for form submission and notification -->
    <script>
