--- a/provoice_Auto_PingPost_13may.html
+++ b/provoice_Auto_PingPost_13may.html
@@ -157,7 +157,7 @@
                 <div class="col-md-12">
           <div class="form-group">
             <label for="source_url">Source URL</label>
-            <input type="text" class="form-control" id="source_url" placeholder="http://" required>
+            <input type="text" class="form-control" id="source_url" value="https://proinsurancequotes.com/auto/" placeholder="http://" required>
           </div>
         </div>
    
@@ -178,7 +178,7 @@
                 <div class="col-md-12">
           <div class="form-group">
             <label for="trusted_form_cert_url">Trusted Form Cert URL</label>
-            <input type="text" class="form-control" id="trusted_form_cert_url" placeholder="Trusted Cert Token Here" required>
+            <input type="text" class="form-control" id="trusted_form_cert_url" value="https://cert.trustedform.com/" placeholder="Trusted Cert Token Here" required>
           </div>
         </div>
    
