--- a/provoice_HI_ringbaRTB_15may.html
+++ b/provoice_HI_ringbaRTB_15may.html
@@ -67,6 +67,9 @@
               <option value="https://rtb.ringba.com/v1/production/7175667ed80f486aac6ed9e04147b173.json">Pest Control</option>
               <option value="https://rtb.ringba.com/v1/production/4ca30dbb243f49d3b2b2b75334ce73f2.json">Plumbing</option>
               <option value="https://rtb.ringba.com/v1/production/3f0bf55f8e5745a0b9400820b42545c9.json">Appliance Repair</option>
+              <option value="https://rtb.ringba.com/v1/production/b64bfa72ac8f4560ac3e6931aa212e9c.json">Flooring</option>
+              <option value="https://rtb.ringba.com/v1/production/f7ecd295816b4a19afbd232dbed4e483.json">Kitchen Remodeling</option>
+              
             </select>
           </div>
         </div>
