--- a/Provoice_autortb_form_29may.html
+++ b/Provoice_autortb_form_29may.html
@@ -163,8 +163,8 @@
             
     <div class="col-md-12">
   <div class="form-group">
-    <label for="trusted_form">Trusted Form</label>
-    <input type="text" class="form-control" id="trusted_form" placeholder="TrustedForm" required>
+    <label for="jornaya">Leadid Here</label>
+    <input type="text" class="form-control" id="jornaya" placeholder="leadid token" required>
   </div>
 </div>
 
@@ -188,7 +188,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/Provoice_autortb_form_29may.js"></script>
+  <script src="https://js.formifyweb.com/Provoice_autortb_form_29may.js?ver=1"></script>
 
   <!-- Custom script for form submission and notification -->
    <script>
