Provoice_EMS_bathpost_June.html

--- a/Provoice_EMS_bathpost_June.html
+++ b/Provoice_EMS_bathpost_June.html
@@ -39,12 +39,16 @@
    <form id="leadForm">
 
 <div class="row">
-<div class="col-md-12">
+<div class="col-md-6">
     <div class="form-group">
       <label for="phone_home">Phone ex: 2108573827</label>
       <input type="text" class="form-control" id="caller_id" placeholder="10 digits US number" required>
     </div>
 </div>
+   <div class="form-group col-md-6">
+                <label for="landing_page">Zipcode</label>
+                <input type="text" class="form-control" id="zip"  placeholder="5 digit zipcode">
+            </div>
 </div>
 
 
