--- a/provoice_RTB_16June25.html
+++ b/provoice_RTB_16June25.html
@@ -78,7 +78,7 @@
 <div class="col-md-12">
   <div class="form-group">
     <label for="landing_page_url">Landing Page URL</label>
-    <input type="text" class="form-control" id="landing_page_url" placeholder="URL..." required>
+    <input type="text" class="form-control" id="landing_page_url" placeholder="URL..." value="https://proinsurancequotes.com/auto/" readonly required>
   </div>
 </div>
 </div>
