--- a/ppc_auto_pingpost_21june25.html
+++ b/ppc_auto_pingpost_21june25.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Jk&c0 Auto Blind Ping/Post</title>
+  <title>PPC Auto Ping/Post</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <style>
     body {
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="container mt-5">
-    <h2 class="text-center">Ping/Post Form (Auto-blind)</h2>
+    <h2 class="text-center">Ping/Post Form (Auto)</h2>
     <form id="leadForm">
    
   
@@ -80,7 +80,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/jk&co_autoBlind_pingpost_20june25.js"></script>
+  <script src="https://js.formifyweb.com/ppc_auto_pingpost_21june25.js"></script>
 
     
 
