--- a/jk&co_autoBlind_pingpost_20june25.html
+++ b/jk&co_autoBlind_pingpost_20june25.html
@@ -41,10 +41,16 @@
   
       <div class="row">
        
- <div class="col-md-4">
+ <div class="col-md-6">
           <div class="form-group">
             <label for="caller_id">Phone (ex: 7123456789)</label>
             <input type="text" class="form-control" id="caller_id" placeholder="Phone" required>
+          </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group">
+            <label for="zip">Zipcode</label>
+            <input type="text" class="form-control" id="zip" placeholder="5 digit zipcode" required>
           </div>
         </div>
  </div>
@@ -80,7 +86,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/jk&co_autoBlind_pingpost_20june25.js"></script>
+  <script src="https://js.formifyweb.com/jk&co_autoBlind_pingpost_20june25.js?ver=1"></script>
 
     
 
