--- a/TheTaskersBPO_ACA_pingpost_26june.html
+++ b/TheTaskersBPO_ACA_pingpost_26june.html
@@ -54,7 +54,7 @@
       <div class="col-md-6">
         <div class="form-group">
           <label for="first_name">First Name</label>
-          <input type="text" class="form-control" id="first_name" placeholder="First Name" required>
+          <input type="text" class="form-control" id="firstname" placeholder="First Name" required>
         </div>
       </div>
 
@@ -62,7 +62,7 @@
       <div class="col-md-6">
         <div class="form-group">
           <label for="last_name">Last Name</label>
-          <input type="text" class="form-control" id="last_name" placeholder="Last Name" required>
+          <input type="text" class="form-control" id="lastname" placeholder="Last Name" required>
         </div>
       </div>
     </div>
