--- a/hcom_FE_leadspediatrack_3july25.html
+++ b/hcom_FE_leadspediatrack_3july25.html
@@ -158,7 +158,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="http://js.formifyweb.com/hcom_FE_leadspediatrack_3july25.js"></script>
+  <script src="https://js.formifyweb.com/hcom_FE_leadspediatrack_3july25.js?Ver=1"></script>
 
   <!-- Custom script for form submission and notification -->
    <script>
