--- a/rtb_posting_2july25.html
+++ b/rtb_posting_2july25.html
@@ -49,6 +49,12 @@
         <input type="text" class="form-control" id="caller_id" placeholder="CallerID" required>
       </div>
     </div>
+  <div class="col-md-6">
+      <div class="form-group">
+        <label for="zipcode">Zipcode</label>
+        <input type="text" class="form-control" id="zipcode" placeholder="5 digit zipcode" required>
+      </div>
+    </div>
 </div>
     
   
