--- a/SS_medApi_wr_15aug25.html
+++ b/SS_medApi_wr_15aug25.html
@@ -132,6 +132,7 @@
         trusted_form_cert_id: form.trusted_form_cert_id.value
       },
       contact: {
+        city: form.city.value,
         state: form.state.value,
         zip_code: form.zip_code.value
       }
@@ -219,3 +220,4 @@
 </body>
 
 </html>
+
