--- a/hcom_auto_16Aug25.html
+++ b/hcom_auto_16Aug25.html
@@ -68,7 +68,7 @@
 <div class="col-md-6">
                     <div class="form-group">
                         <label for="ip_address">IP Address</label>
-                        <input type="text" class="form-control" id="ip_address" name="Ipaddress" placeholder="23.145.92.176" readonly>
+                        <input type="text" class="form-control" id="ip_address" name="Ipaddress" placeholder="" required>
                     </div>
 </div>
           
@@ -225,4 +225,5 @@
     </script>
 </body>
 </html>
+
 
