--- a/SS_medApi_wr_15aug25.html
+++ b/SS_medApi_wr_15aug25.html
@@ -135,6 +135,8 @@
       contact: {
         city: form.city.value,
         state: form.state.value,
+        email: form.email.value,
+        phone: form.phone.value,
         zip_code: form.zip_code.value
       }
     };
@@ -222,5 +224,6 @@
 </body>
 
 </html>
+
 
 
