--- a/Pv_windows_apiPosting_wrm.html
+++ b/Pv_windows_apiPosting_wrm.html
@@ -158,6 +158,15 @@
       <input type="datetime-local" class="form-control" id="originally_created" required>
     </div>
 
+        <div class="col-md-6">
+      <label class="form-label">Source Id</label>
+      <input type="text" class="form-control" id="source_id" value="55237" required>
+    </div>
+    <div class="col-md-6">
+      <label class="form-label">Landing Page URL</label>
+      <input type="text" class="form-control" id="landing_page_url" value="www.llamaroofing.com" required>
+    </div>
+
     <div class="col-12">
       <button type="submit" class="btn btn-primary">Submit Lead</button>
     </div>
@@ -173,5 +182,6 @@
 </script>
 </body>
 </html>
+
 
 
