--- a/pega_post26aug.html
+++ b/pega_post26aug.html
@@ -138,7 +138,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/pega_ringba_22aug.js"></script>
+  <script src="https://js.formifyweb.com/pega_post26aug.js"></script>
 
     
 
@@ -156,4 +156,5 @@
  
 </body>
 </html>
+
 
