--- a/ksbpo_tdpingpost3sep25.html
+++ b/ksbpo_tdpingpost3sep25.html
@@ -43,6 +43,14 @@
         <input type="text" class="form-control" id="caller_id" placeholder="Phone" required>
       </div>
 
+      <div class="row">
+      <div class="col-md-6">
+      <div class="form-group">
+        <label for="zipcode">Zipcode</label>
+        <input type="text" class="form-control" id="zip" placeholder="5 digit" required>
+      </div>
+    </div>
+</div>
 
 
   
@@ -70,7 +78,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/ksbpo_tdpingpost3sep25.js"></script>
+  <script src="https://js.formifyweb.com/ksbpo_tdpingpost3sep25.js?ver=1"></script>
 
     
 
@@ -88,3 +96,4 @@
  
 </body>
 </html>
+
