--- a/cyp_roofing_apiPosting_wrm.html
+++ b/cyp_roofing_apiPosting_wrm.html
@@ -173,6 +173,12 @@
   <label class="form-label">Source Id</label>
   <select class="form-control" id="source_id" required>
     <option value="110021">110021(www.shelterfix.com)</option>
+    <option value="110022">110022(www.simonroofing.com)</option>
+    <option value="110023">110023(www.championroofing-usa.com)</option>
+    <option value="110024">110024(www.remedyroofing.com/remedy-roofing-services/roof-repair/)</option>
+    <option value="110025">110025(www.roofworksusa.com)</option>
+    <option value="110026">110026(www.roofingkingusa.com)</option>
+    <option value="110027">110027(www.usahome-roof.com/roofing-material/)</option>
 
   </select>
 </div>
@@ -181,6 +187,12 @@
   <label class="form-label">Landing Page URL</label>
   <select class="form-control" id="landing_page_url" required>
      <option value="www.shelterfix.com" selected>www.shelterfix.com</option>
+     <option value="www.simonroofing.com" selected>www.simonroofing.com</option>
+     <option value="www.championroofing-usa.com" selected>www.championroofing-usa.com</option>
+     <option value="www.remedyroofing.com/remedy-roofing-services/roof-repair/" selected>www.remedyroofing.com/remedy-roofing-services/roof-repair/</option>
+     <option value="www.roofworksusa.com" selected>www.roofworksusa.com</option>
+     <option value="www.roofingkingusa.com" selected>www.roofingkingusa.com</option>
+     <option value="www.usahome-roof.com/roofing-material/" selected>www.usahome-roof.com/roofing-material/</option>
      
     
   </select>
@@ -200,6 +212,7 @@
 </script>
 </body>
 </html>
+
 
 
 
