--- a/cyp_windows_apiPosting_wrm.html
+++ b/cyp_windows_apiPosting_wrm.html
@@ -176,12 +176,12 @@
   <label class="form-label">Landing Page URL</label>
   <select class="form-control" id="landing_page_url" required>
      <option value="www.shelterfix.com" selected>www.shelterfix.com</option>
-     <option value="www.simonroofing.com" selected>www.simonroofing.com</option>
-     <option value="www.championroofing-usa.com" selected>www.championroofing-usa.com</option>
-     <option value="www.remedyroofing.com/remedy-roofing-services/roof-repair/" selected>www.remedyroofing.com/remedy-roofing-services/roof-repair/</option>
-     <option value="www.roofworksusa.com" selected>www.roofworksusa.com</option>
-     <option value="www.roofingkingusa.com" selected>www.roofingkingusa.com</option>
-     <option value="www.usahome-roof.com/roofing-material/" selected>www.usahome-roof.com/roofing-material/</option>
+     <option value="www.simonroofing.com">www.simonroofing.com</option>
+     <option value="www.championroofing-usa.com">www.championroofing-usa.com</option>
+     <option value="www.remedyroofing.com/remedy-roofing-services/roof-repair/">www.remedyroofing.com/remedy-roofing-services/roof-repair/</option>
+     <option value="www.roofworksusa.com">www.roofworksusa.com</option>
+     <option value="www.roofingkingusa.com">www.roofingkingusa.com</option>
+     <option value="www.usahome-roof.com/roofing-material/">www.usahome-roof.com/roofing-material/</option>
    
     
   </select>
@@ -203,6 +203,7 @@
 </script>
 </body>
 </html>
+
 
 
 
