--- a/pv_auto_preping_10sep25.html
+++ b/pv_auto_preping_10sep25.html
@@ -160,7 +160,7 @@
 <div class="col-md-4">
                     <div class="form-group">
                         <label for="dob">Date of Birth (MM/DD/YYYY)</label>
-                        <input type="text" class="form-control" id="dob" placeholder="MM/DD/YYYY" required>
+                        <input type="date" class="form-control" id="dob" placeholder="MM/DD/YYYY" required>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -211,4 +211,5 @@
     </script>
 </body>
 </html>
+
 
