--- a/pv_auto_preping_10sep25.html
+++ b/pv_auto_preping_10sep25.html
@@ -159,7 +159,7 @@
                 </div>
 <div class="col-md-4">
                     <div class="form-group">
-                        <label for="dob">Date of Birth (MM/DD/YYYY)</label>
+                        <label for="dob">Date of Birth</label>
                         <input type="date" class="form-control" id="dob" placeholder="MM/DD/YYYY" required>
                     </div>
                 </div>
@@ -211,5 +211,6 @@
     </script>
 </body>
 </html>
+
 
 
