--- a/Pv_roofing_apiPosting_wrm.html
+++ b/Pv_roofing_apiPosting_wrm.html
@@ -179,6 +179,12 @@
     <option value="10035">10035 (www.homecontractors.com)</option>
     <option value="10036">10036 (www.homeupgradepros.us)</option>
      <option value="10037">10037 (www.roofing.myhomepros.com)</option>
+    <option value="10038">10038 (www.vbrroofing.com)</option>
+    <option value="10039">10039 (www.roofrepairsolutions.net)</option>
+    <option value="10040">10040 (www.goshanco.com/roofing/repair/)</option>
+    <option value="10041">10041 (www.northernskiesroofing.com/services/)</option>
+    <option value="10042">10042 (www.rooftopsusa.com/services/roof-maintenance/)</option>
+    
   </select>
 </div>
 
@@ -192,6 +198,11 @@
       <option value="www.homecontractors.com">www.homecontractors.com</option>
      <option value="www.homeupgradepros.us">www.homeupgradepros.us</option>
     <option value="www.roofing.myhomepros.com">www.roofing.myhomepros.com</option>
+    <option value="www.vbrroofing.com">www.vbrroofing.com</option>
+    <option value="www.roofrepairsolutions.net">www.roofrepairsolutions.net</option>
+    <option value="www.goshanco.com/roofing/repair/">www.goshanco.com/roofing/repair/</option>
+    <option value="www.northernskiesroofing.com/services/">www.northernskiesroofing.com/services/</option>
+    <option value="www.rooftopsusa.com/services/roof-maintenance/">www.rooftopsusa.com/services/roof-maintenance/</option>
     
   </select>
 </div>
@@ -210,6 +221,7 @@
 </script>
 </body>
 </html>
+
 
 
 
